# noVax

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cmemory.cpp  Cmemory.h  Cmemory.hpp  Cprocessor.hpp  Makefile  README.md  READMEe.md  cmake_install.cmake  cpp.hint  item_colours.h  noVAX.cpp  noVAX.sln  noVAX.vcxproj  noVAX.vcxproj.filters  panel_mem.cpp  panel_mem.h  panel_msg.cpp  panel_msg.h  panel_regs.cpp  panel_regs.h  panel_srch.cpp  panel_srch.h  panel_vars.cpp  panel_vars.h  panels.cpp  panels.h  start.cpp  start.h  ЕЫЯ-GUI.sln  ЕЫЯ-GUI.vcxproj  ЕЫЯ-GUI.vcxproj.filters
.github/workflows/: CI.yml  smoke-test.yml
noVaxCLIDevTools/: CMakeLists.txt  noVAX.cpp
noVaxEngine/: CMakeLists.txt  Cflags.h  Cmemory.hpp  Cprocessor.cpp  Cprocessor.h  Cprocessor.hpp  noVAX.cpp
noVaxEngine/tests/: Cpocessor_vax_labs_tests.cpp  Cprocessor_addressing_0123.cpp  Cprocessor_addressing_4.cpp  Cprocessor_addressing_5.cpp  Cprocessor_addressing_6.cpp  Cprocessor_addressing_7.cpp  Cprocessor_addressing_8.cpp  Cprocessor_addressing_9.cpp  Cprocessor_addressing_ACE.cpp  Cprocessor_addressing_BDF.cpp  Cprocessor_operations_test.cpp  Cprocessor_save_load.cpp  test.cpp  test.h
noVaxEngine/tests/file/Cprocessor_addressing_0123/: Default.v11  byte.v11  byte_.v11  long.v11  long_.v11  word.v11  word_.v11
noVaxEngine/tests/file/Cprocessor_addressing_4/: byte.v11  byte_.v11  long.v11  long_.v11  word.v11  word_.v11
noVaxEngine/tests/file/Cprocessor_addressing_5/: _byte.v11  _byte_3op.v11  _long.v11  _long_3op.v11  _word.v11  _word_3op.v11  byte.v11  byte_3op.v11  long.v11  long_3op.v11  word.v11  word_3op.v11
noVaxEngine/tests/file/Cprocessor_addressing_6/: byte.v11  byte_.v11  byte_3op.v11  byte_3op_.v11  long.v11  long_.v11  long_3op.v11  long_3op_.v11  word.v11  word_.v11  word_3op.v11  word_3op_.v11
noVaxEngine/tests/file/Cprocessor_addressing_7/: byte.v11  byte_.v11  byte_3op.v11  byte_3op_.v11  long.v11  long_.v11  long_3op.v11  long_3op_.v11  word.v11  word_.v11  word_3op.v11  word_3op_.v11
noVaxEngine/tests/file/Cprocessor_addressing_8/: byte.v11  byte_.v11  byte_3op.v11  byte_3op_.v11  long.v11  long_.v11  long_3op.v11  long_3op_.v11  word.v11  word_.v11  word_3op.v11  word_3op_.v11
noVaxEngine/tests/file/Cprocessor_addressing_9/: byte.v11  byte_.v11  byte_3op.v11  byte_3op_.v11  long.v11  long_.v11  long_3op.v11  long_3op_.v11  word.v11  word_.v11  word_3op.v11  word_3op_.v11
noVaxEngine/tests/file/Cprocessor_addressing_ACE/: byte.v11  byte_.v11  byte_3op.v11  byte_3op_.v11  long.v11  long_.v11  long_3op.v11  long_3op_.v11  word.v11  word_.v11  word_3op.v11  word_3op_.v11
noVaxEngine/tests/file/Cprocessor_addressing_BDF/: byte.v11  byte_.v11  byte_3op.v11  byte_3op_.v11  long.v11  long_.v11  long_3op.v11  long_3op_.v11  word.v11  word_.v11  word_3op.v11  word_3op_.v11
noVaxEngine/tests/file/Cprocessor_save_load/: 1.v11  1lab_do.v11  1lab_posle.v11  2.v11  Lab_1_part_2_default.v11  lab3_part_1_after.v11  lab3_part_1_default.v11  lab3_part_2_after.v11  lab3_part_2_default.v11  lab4_after.v11  lab4_default.v11  lab_1_part_2_after.v11  test_1.v11  test_2.v11
noVaxGUI/: CMakeLists.txt  TODO.txt  item_colours.h  panel_mem.cpp  panel_mem.h  panel_msg.cpp  panel_msg.h  panel_regs.cpp  panel_regs.h  panel_srch.cpp  panel_srch.h  panels.h  start.cpp  start.h
src/: CMakeLists.txt  Cflags.h  Cmemory.hpp  Cprocessor.hpp  hex_printing.h  noVAX.cpp
